k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <<app_name>>-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: <<app_name>>-app
  ports:
    - port: 80
      targetPort: 80
