k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <<app_name>>-ingress-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: <<host_name>>
      http:
        paths:
          - path: <<path_name>>
            pathType: Prefix
            backend:
              service:
                name: <<app_name>>-service
                port:
                  number: 80
